[package]
name = "liischte"
version = "0.1.0"
edition = "2024"

[dependencies]
liischte-lib = { path = "lib" }

chrono = "0.4.40"
anyhow = "*"

tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.31"

# we use our own fork of cosmic's iced fork
iced = { git = "https://github.com/VirtCode/iced", features = ["advanced", "tokio", "winit", "wayland", "multi-window"] }
iced_winit = { git = "https://github.com/VirtCode/iced", features = ["wayland", "multi-window"], default-features = false }
wayland-client = "0.31.10"

log = "0.4.27"
env_logger = "0.11.7"

serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
indexmap = "2.9.0"

lucide-icons = "0.507.0"

# stuff used for abstraction
downcast = "0.11.0"
dyn-clone = "1.0.19"
async-trait = "0.1.88"
