[package]
name = "liischte-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# we use a lot of async
tokio = { version = "1.44.1", features = ["net", "fs", "io-util", "sync"] }
tokio-stream = { version = "0.1.17", features = ["fs", "io-util", "sync"] }

futures = "0.3.31"

# we might need to deserialize stuff
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# logging and error handling
anyhow = "1.0.98"
log = "0.4.27"
futures-core = "0.3.31"
pin-project-lite = "0.2.16"

# power feature
udev = { version = "0.9.3", features = ["send"], optional = true }

# pipewire feature
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", optional = true }

# network manager
zbus = { version = "5.7.1", default-features = false, features = ["tokio"], optional = true }
rusty_network_manager = { git = "https://github.com/flukejones/network_manager", optional = true, default-features = false, features = ["access_point", "active", "wireless"] }

# modem manager
modemmanager = { git = "https://github.com/omnect/modemmanager", optional = true}

[features]
hyprland = []
power = ["dep:udev"]
pipewire = ["dep:pipewire"]
networkmanager = ["dep:zbus", "dep:rusty_network_manager"]
modemmanager = ["networkmanager", "dep:modemmanager", "rusty_network_manager/device"]

default = ["hyprland", "power", "pipewire", "networkmanager", "modemmanager"]
